# frontend

./: .eslintrc.js  .gitignore  Dockerfile  ISSUES.md  README.md  global.d.ts  gulpfile.js  gulpfile2.js  jest.config.js  make_config.sh  newrelic.js  package-lock.json  package.json  postcss.config.js  run.sh  static_server.js  tsconfig.json  typings.json  webpack.config.js
TypeScriptDefinitions/: SoundManager.d.ts  WebGazerCalibration.d.ts  crypto-js.d.ts  face-landmark-wasm.d.ts  highcharts.d.ts  highchartsDraggable.d.ts  knockout.d.ts  routie.d.ts  taggle.d.ts  webgazer.d.ts
dependencies/PortalClient/: PortalClient.min.js
dependencies/Routie/: routie.min.js
dependencies/sweetalert/typings/: core.d.ts  sweetalert.d.ts
dependencies/sweetalert2/: package.json
dependencies/taggle/: taggle.css
dependencies/webgazer/: webgazer.commonjs2.min.js  webgazer.min.js
source/: WayfCallback.html  configuration.json  default.html  global.d.ts
source/application/: CockpitPortal.ts  Config.ts  Configuration.ts  Main.scss  Main.ts
source/application/Components/: DisposableComponent.ts  NameConventionLoader.ts
source/application/KnockoutBindings/: CanvasContext.ts  ClickPosition.ts  Element.ts  Height.ts  KnockoutBindings.ts  ScrollTo.ts  Width.ts
source/application/Managers/: CallQueue.ts  CallRepeater.ts  Configuration.ts  Experiment.ts  FaceLandmarkerManager.ts  Notification.ts  (+4 more)
source/test_fixtures/: landmarker_config.json  landmarker_result.json
wasm/: README.md
wasm/face-landmark/: Cargo.toml
wasm/face-landmark/src/: lib.rs  wasm_stub.js  wasm_utils.rs
(+164 files in other folders)
