[package]
name = "face-landmark"
version = "0.1.0"
authors = ["Claude <noreply@anthropic.com>"]
edition = "2021"
description = "WebAssembly implementation of face landmark compression"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = ["Window", "Performance", "PerformanceTiming"] }
serde_json = "1.0.140"
